--- a/package.json
+++ b/package.json
@@ -1,50 +1,32 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "homepage": "https://jiechenmc.github.io/dash",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap-icons": "^1.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-draggable": "^4.4.4",
-    "react-modal": "^3.14.4",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
-  },
+  "name": "dash",
+  "version": "1.0.0",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "server.js",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "client-install": "cd client && npm install",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jiechenmc/dash.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jiechenmc/dash/issues"
+  },
+  "homepage": "https://github.com/jiechenmc/dash#readme",
+  "dependencies": {
+    "concurrently": "^7.0.0",
+    "express": "^4.17.3"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.4",
-    "gh-pages": "^3.2.3",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23"
+    "nodemon": "^2.0.15"
   }
 }
