--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-draggable": "^4.4.4",
     "react-modal": "^3.14.4",
     "react-scripts": "5.0.0",
+    "react-spotify-web-playback": "^0.9.1",
     "spotify-web-api-node": "^5.0.2",
     "web-vitals": "^2.1.4"
   },
